project/mp4cloud/chart/mp4cloud/手动部署所需文件/mp-auth-ingress.bakbak.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mp-auth-ingress
  namespace: mp4cloud
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
             proxy_set_header  Host        $host;
             proxy_set_header  X-Real-IP    $remote_addr;
             proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
             add_header Access-Control-Allow-Origin *;
             add_header Access-Control-Allow-Headers X-Requested-With,Content-Type,x_requested_with;
             add_header Access-Control-Allow-Methods HEAD,GET,POST,OPTIONS;
spec:
  rules:
  - host: auth.mp4cloud.com
    http:
      paths:
      - path:
        backend:
          serviceName: mp-auth-svc
          servicePort: 3000
